@@ -1,25 +1,27 @@
 package tasklist;
 
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
 import ui.TextUi;
 
 import java.time.LocalDateTime;
-import java.util.LinkedList;
 
 /**
  * Represents an entire tasklist and contains methods to edit and display the list.
  */
 public class TaskList {
-    protected LinkedList<Task> taskList;
+
+    protected ObservableList<Task> tasks;
     private TextUi ui;
 
     public TaskList() {
-        taskList = new LinkedList<Task>();
+        tasks = FXCollections.observableArrayList();
         ui = new TextUi();
     }
 
 
-    public TaskList(LinkedList<Task> loadedList) {
-        taskList = loadedList;
+    public TaskList(ObservableList<Task> loadedList) {
+        tasks = loadedList;
         ui = new TextUi();
     }
 
@@ -27,14 +29,14 @@ public class TaskList {
      * prints the ui after adding a new task.
      */
     public void printNewTask() {
-        ui.printAddedTask(taskList.getLast().getOverallStatus(),taskList.size());
+        ui.printAddedTask(tasks.get(tasks.size()-1).getOverallStatus(), tasks.size());
     }
 
     /**
      * prints the ui for listing tasks.
      */
     public void listTasks() {
-        ui.printTaskList(taskList);
+        ui.printTaskList(tasks);
     }
 
     /**
@@ -43,8 +45,8 @@ public class TaskList {
      */
     public void completeTask(String completedtask) {
         int taskNumber = Integer.parseInt(completedtask);
-        taskList.get(taskNumber - 1).completeTask();
-        ui.printCompletedTask(taskList.get(taskNumber - 1).getOverallStatus());
+        tasks.get(taskNumber - 1).completeTask();
+        ui.printCompletedTask(tasks.get(taskNumber - 1).getOverallStatus());
     }
 
     /**
@@ -57,13 +59,13 @@ public class TaskList {
     public void addTask(String taskType, String description, boolean completionStatus, LocalDateTime date) {
         switch (taskType) {
         case "todo":
-            taskList.addLast(new Todo(description,completionStatus));
+            tasks.add(new Todo(description,completionStatus));
             break;
         case "deadline":
-            taskList.addLast(new Deadline(description, completionStatus, date));
+            tasks.add(new Deadline(description, completionStatus, date));
             break;
         case "event":
-            taskList.addLast(new Event(description, completionStatus, date));
+            tasks.add(new Event(description, completionStatus, date));
             break;
         default:
             // not necessary as tasktype can only be the above 3
@@ -76,17 +78,17 @@ public class TaskList {
      */
     public void removeTask(String deletedEvent) {
         if (deletedEvent.contains("all")){
-            taskList.clear();
-            ui.printRemovedTask("All tasks",taskList.size()+1);
+            tasks.clear();
+            ui.printRemovedTask("All tasks", tasks.size()+1);
         }else {
             int taskTodDelete = Integer.parseInt(deletedEvent);
-            ui.printRemovedTask(taskList.get(taskTodDelete - 1).getOverallStatus(), taskList.size());
-            taskList.remove(taskTodDelete - 1);
+            ui.printRemovedTask(tasks.get(taskTodDelete - 1).getOverallStatus(), tasks.size());
+            tasks.remove(taskTodDelete - 1);
         }
     }
 
-    public LinkedList<Task> getTaskList() {
-        return taskList;
+    public ObservableList<Task> getTasks() {
+        return tasks;
     }
 
     /**
@@ -94,13 +96,17 @@ public class TaskList {
      * @param search the string to search for
      */
     public void findTasks(String search) {
-        LinkedList<String> foundtasks = new LinkedList<>();
-        for (Task task: taskList) {
+        ObservableList<String> foundtasks = FXCollections.observableArrayList();
+        for (Task task: tasks) {
             if (task.getOverallStatus().contains(search)) {
-                foundtasks.addLast(task.getOverallStatus());
+                foundtasks.add(task.getOverallStatus());
             }
         }
         ui.printFoundTasks(foundtasks);
+    }
+
+    public void setTasks(ObservableList<Task> tasks) {
+        this.tasks = tasks;
     }
 
 }
